--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,39 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
+  <head>
     <title>Название сайта</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="styles/bootstrap.min.css" />
     <link rel="stylesheet" href="styles/main.min.css" />
-</head>
-<body>
-<div class="wrapper">
-Контент
-    <img src="images/together.jpg" alt="together" />
-</div>
-<script src="scripts/main.min.js"></script>
-</body>
+  </head>
+  <body>
+    <div class="wrapper">
+      Контент: {{ vueContent }}
+      <test-component></test-component>
+      <div class="row">
+        <div class="col">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi aut
+          blanditiis cum cupiditate dignissimos dolore ea esse et facilis hic
+          inventore ipsa iure libero maxime modi non quam quasi quia quibusdam
+          recusandae reprehenderit sed sint, soluta totam ullam vel veritatis
+          voluptas? Dolorem eius labore saepe. Accusamus aspernatur consequuntur
+          illum suscipit.
+        </div>
+        <div class="col-auto">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi,
+          neque.
+        </div>
+        <div class="col text-right">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
+          alias animi mollitia recusandae repellendus veniam!
+        </div>
+      </div>
+    </div>
+    <script src="scripts/vendors~main.min.js"></script>
+    <script src="scripts/main.min.js"></script>
+  </body>
 </html>
